Ajuste dos projetos para o docker, criação de novos projetos e desenvolvimento geral.